# Ai_CrawlingCluster

./: .gitignore  README.md  data_caching.py  dir_folder.sh  keyword_gener.py  main.py  pyproject.toml  requirements.txt
common/: async_http_client.py  selenium_utils.py  url_utils.py
common/abstract/: abstract_async_request.py
configs/: properties.py
configs/cy/: database.yaml  keyword.yaml
crawlers/: __init__.py  api_ndg.py  news_parsing.py
crawlers/google/: google_parsing.py  google_selenium.py
databases/: keyword.py  keyword_generator.py  keyword_redis.py
databases/cache/: redis_cluster_manager.py  redis_manager.py
databases/nosql/: async_mongo.py
tests/: test_crawlers.py
utils/: promt.py  search_util.py
