[tool.poetry]
name = "ai-crawlingcluster"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
numpy = "^2.2.0"
pandas = "^2.2.3"
black = "^24.10.0"
mypy = "^1.13.0"
configparser = "^7.1.0"
setuptools = "^75.6.0"
aiohttp = "^3.11.10"
requests = "^2.32.3"
konlpy = "^0.6.0"
jpype1 = "^1.5.1"
pymysql = "^1.1.1"
boto3 = "^1.35.82"
motor = "^3.6.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
bs4 = "^0.0.2"
selenium = "^4.27.1"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "^3.5.5"
webdriver-manager = "^4.0.2"
newspaper3k = "^0.2.8"
lxml = "^5.3.0"
fake-useragent = "^2.0.3"
faker = "^33.1.0"
matplotlib = "^3.10.0"
redis = "^5.2.1"
aioredis = "^2.0.1"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.6.0"
openai = "^1.57.4"
lxml-html-clean = "^0.4.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

